complete restaurant reviews client side

--- a/restaurant-client/app/index.html
+++ b/restaurant-client/app/index.html
@@ -79,6 +79,9 @@
         <script src="restaurant-details/js/restaurant-details-service.js"></script>
         <script src="restaurant-details/js/route.js"></script>
 
+        <script src="review/js/review-model.js"></script>
+        <script src="review/js/review-service.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
