add explicit search in client side

--- a/restaurant-client/app/home/html/home.html
+++ b/restaurant-client/app/home/html/home.html
@@ -10,15 +10,15 @@
 
                 <div class="form-group finder">
                   <h2 class="banner-title">Find your resturant</h2>
-                  <input  type="text" placeholder="Enter a location" class="form-control search-input" id="email">
-                   <button type="submit" class="btn btn-success search" >Search</button>
+                  <input  type="text" gm-places-autocomplete ng-model="autocomplete" placeholder="Enter a location" class="form-control search-input" id="email">
+                   <button type="submit" ng-click="searchNearbyRestaurantByLocation()" class="btn btn-success search" >Search</button>
                 </div>
               </form>
         </div>
     </div>
   </div>
 
-  <div class="title">
+  <div id="neaby_restaurants" class="title">
     <h1>Restaurants near you</h1>
   </div>
   
