--- a/restaurant-client/app/commons/html/main.html
+++ b/restaurant-client/app/commons/html/main.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Resturant finder</a>
+      <a class="navbar-brand logo-text" href="#" >Resturant finder</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
