--- a/restaurant-client/app/index.html
+++ b/restaurant-client/app/index.html
@@ -16,9 +16,10 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="commons/css/common.css">
     <link rel="stylesheet" type="text/css" href="home/css/home.css">
     <link rel="stylesheet" type="text/css" href="restaurant-details/css/restaurant-details.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <!-- endbuild -->
   </head>
   <body ng-app="returantFinderApp">
@@ -60,10 +61,13 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-jk-rating-stars/dist/jk-rating-stars.js"></script>
     <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
+    <script src="bower_components/angularjs-google-maps/dist/angularjs-google-maps.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-        <script src="http://maps.google.com/maps/api/js?key=AIzaSyBvh95idRI46rYYWqQpoHatZve2GoWIfUg"></script>
+        <script src="http://maps.google.com/maps/api/js?key=AIzaSyBvh95idRI46rYYWqQpoHatZve2GoWIfUg&libraries=places"></script>
+      
+
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="commons/js/app.js"></script>
         <script src="commons/js/constants.js"></script>
